--- a/trilha_desafio_3/gerenciar-estoque/public/index.html
+++ b/trilha_desafio_3/gerenciar-estoque/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio</title>
-    <script type="module" src="./index.js" defer></script>
+    <title>TS</title>
+    <script type="module" src="../public/index.js"></script>
 </head>
 <body>
-    <h1>OPA</h1>
+    <h1>...</h1>
 </body>
 </html>
