--- a/trilha_desafio_3/gerenciar-estoque/public/index.html
+++ b/trilha_desafio_3/gerenciar-estoque/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TS</title>
-    <script type="module" src="../public/index.js"></script>
+    <script type="module" src="./index.js"></script>
 </head>
 <body>
     <h1>...</h1>
